# chainequity-solana

./: .env.example  .gitignore  Anchor.toml  CEo1ptXCF7KvMs5nrvTmo2BuZWENa5rnjov6TerG4eBo.json  EMP1csavvm2Q8cwhbpHga9aYggu7bM2ZR6QFrxjj4jRH.json  EMP2ZryS3yACjaDbeDnfyPxkhqAZNkgVkd5FoFr4A4Si.json  Makefile  PLAN-activity-type-display.md  README.md  RESETGUIDE.md  VC1CnUTHHejptU6edjMda8BxgCGvCEcAP3iemAMS2hP.json  VC2SosoqZU7FzYfmtxKzZc2oGHK2WMpWaGBbtBqv3q7.json  VC3FHFPyGaw68eEoqk59eeCUssu9zwrfd7SDMRyE8j7.json  analysis_report.md  docker-compose.devnet.yml  docker-compose.localnet.yml  docker-compose.yml  package.json  pnpm-lock.yaml  test-usdc-mint.json  tsconfig.json
backend/: alembic.ini  fix_token_supply.py  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/tests/: conftest.py
docs/: API.md  DEPLOYMENT.md  chainequity-prd-v1.5.md
env/: devnet.env.example  localnet.env.example
frontend/: .env.example  Dockerfile  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
programs/chainequity_factory/: Cargo.toml
programs/chainequity_factory/src/: errors.rs  events.rs  lib.rs  state.rs
programs/chainequity_factory/src/instructions/: admin.rs  create_token.rs  initialize.rs  mod.rs  multisig.rs  templates.rs
programs/chainequity_token/: Cargo.toml
programs/chainequity_token/src/: errors.rs  events.rs  lib.rs  state.rs
programs/chainequity_token/src/instructions/: admin.rs  allowlist.rs  corporate_actions.rs  dividends.rs  mint.rs  mod.rs  restrictions.rs  transfer.rs  vesting.rs
programs/test_usdc/: Cargo.toml
programs/test_usdc/src/: lib.rs
scripts/: create-token.ts  init-and-create-token.ts  init-test-usdc.ts  seed-demo-data.ts  seed-test-data.ts  sync-token-to-db.ts
tests/: chainequity.ts
(+132 files in other folders)
