[package]
name = "chainequity_factory"
version = "0.1.0"
description = "ChainEquity Token Factory - Creates and manages security tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chainequity_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "token-2022", "metadata"] }
solana-program = "1.18"
