[package]
name = "chainequity_token"
version = "0.1.0"
description = "ChainEquity Token - Core token operations with compliance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chainequity_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022", "metadata"] }
solana-program = "1.18"
chainequity_factory = { path = "../chainequity_factory", features = ["cpi"] }
