[package]
name = "test_usdc"
version = "0.1.0"
description = "Test USDC - Mock stablecoin for dividend testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_usdc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022"] }
solana-program = "1.18"
